deploy/compose/envoy/envoy.yaml
# Configuring envoy as an edge proxy:
# https://www.envoyproxy.io/docs/envoy/latest/configuration/best_practices/edge.html

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000

static_resources:
# secrets:
# - name: edge_cert
#   tls_certificate:
#     certificate_chain:
#       filename: certs/server.cert.pem
#     private_key:
#       filename: certs/server.key.pem
# - name: validation_context
#   validation_context:
#     trusted_ca:
#       filename: certs/ca.cert.pem

  listeners:
  - name: listener_edge_ingress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    per_connection_buffer_limit_bytes: 32768 # 32 KiB
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: listener_edge_ingress
          use_remote_address: true
          common_http_protocol_options:
            idle_timeout: 3600s
            headers_with_underscores_action: REJECT_REQUEST
          http2_protocol_options:
            max_concurrent_streams: 100
            initial_stream_window_size: 65536 # 64 KiB
            initial_connection_window_size: 1048576 # 1 MiB
          # must be disabled for long-lived and streaming requests
          stream_idle_timeout: 0s
          request_timeout: 0s
          route_config:
            name: route_edge_ingress
            virtual_hosts:
            - name: route_edge_ingress
              domains:
              - "*"
              routes:
              - match: # http access to portal
                  prefix: /v1/account/
                route:
                  cluster: cluster_librad
                  timeout: 1s
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                    disabled: true
              - match: # grpc access to portal
                  prefix: /libra.v1.Account/
                  grpc: {}
                route:
                  cluster: cluster_librad
                  timeout: 1s # unary
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                    disabled: true
              - match: # grpc access to gateway
                  path: /libra.v1.Gateway/Access
                  grpc: {}
                route:
                  cluster: cluster_librad
                  timeout: 0s # stream
              - match: # grpc access to echo
                  prefix: /libra.sdk.examples.echo.Echo/
                  grpc: {}
                route:
                  cluster: cluster_echo
                  timeout: 0s
              cors:
                allow_origin_string_match:
                - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message

          http_filters:
            # grpc-web configuration example:
            # https://github.com/grpc/grpc-web/blob/master/net/grpc/gateway/examples/helloworld/envoy.yaml
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              grpc_service:
                envoy_grpc:
                  cluster_name: cluster_librad
                timeout: 0.2s
          - name: envoy.filters.http.router

  - name: listener_libra
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: listener_libra
          route_config:
            name: route_libra
            virtual_hosts:
            - name: route_libra
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                  grpc: {}
                route:
                  cluster: cluster_librad
                  timeout: 0s
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
#     transport_socket:
#       name: envoy.transport_sockets.tls
#       typed_config:
#         "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
#         common_tls_context:
#           tls_certificate_sds_secret_configs:
#           - name: edge_cert
#           validation_context_sds_secret_config:
#             name: validation_context

  - name: listener_redis_egress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 6379
    filter_chains:
    - filters:
      - name: envoy.filters.network.redis_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.redis_proxy.v3.RedisProxy
          stat_prefix: listener_redis_egress
          settings:
            op_timeout: 5s
            enable_hashtagging: true
          prefix_routes:
            catch_all_route:
              cluster: cluster_redis

  - name: listener_mongo_egress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 27017
    filter_chains:
    - filters:
      - name: envoy.filters.network.mongo_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.mongo_proxy.v3.MongoProxy
          stat_prefix: listener_mongo_egress
          #access_log: "/var/log/envoy/mongo_access.log"
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: listener_mongo_egress
          cluster: cluster_mongo

  clusters:
    # redis在不同应用时要分别配置分发规则
    # account  使用的redis作为临时状态数据，在异常情况下完全可以被抛弃。
    #          所以应该在一致性哈希的策略下开启健康检查以提高可用性。
    # database 使用的redis里存放重要状态数据，目标节点下线也不可以使用
    #          其他节点。所以应该在一致性哈希的策略下关闭健康检查。
    # ranking  同database
  - name: cluster_redis
    connect_timeout: 0.2s
    type: STRICT_DNS
    lb_policy: MAGLEV
    load_assignment:
      cluster_name: cluster_redis
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: libra-redis1
                port_value: 6379
        - endpoint:
            address:
              socket_address:
                address: libra-redis2
                port_value: 6379
        - endpoint:
            address:
              socket_address:
                address: libra-redis3
                port_value: 6379
    health_checks:
    - timeout: 0.2s
      interval: 1s
      healthy_threshold: 1
      unhealthy_threshold: 3
      custom_health_check:
        name: envoy.health_checkers.redis
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.redis_proxy.v3.RedisProxy
          #key: foo

  - name: cluster_mongo
    connect_timeout: 0.2s
    type: STRICT_DNS
    lb_policy: MAGLEV
    load_assignment:
      cluster_name: cluster_mongo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: libra-mongo
                port_value: 27017

  - name: cluster_librad
    connect_timeout: 0.2s
    http2_protocol_options: {}
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cluster_librad
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: libra-librad
                port_value: 80
    health_checks:
    - timeout: 0.2s
      interval: 1s
      healthy_threshold: 1
      unhealthy_threshold: 3
      grpc_health_check: {}

  - name: cluster_echo
    connect_timeout: 1s
    per_connection_buffer_limit_bytes: 32768 # 32 KiB
    http2_protocol_options: {}
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cluster_echo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: libra-echo
                port_value: 80
#   health_checks:
#   - timeout: 0.2s
#     interval: 1s
#     healthy_threshold: 1
#     unhealthy_threshold: 3
#     grpc_health_check: {}

overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
  - name: "envoy.resource_monitors.fixed_heap"
    typed_config:
      "@type": type.googleapis.com/envoy.config.resource_monitor.fixed_heap.v2alpha.FixedHeapConfig
      # TODO: Tune for your system.
      max_heap_size_bytes: 2147483648 # 2 GiB
  actions:
  - name: "envoy.overload_actions.shrink_heap"
    triggers:
    - name: "envoy.resource_monitors.fixed_heap"
      threshold:
        value: 0.95
  - name: "envoy.overload_actions.stop_accepting_requests"
    triggers:
      - name: "envoy.resource_monitors.fixed_heap"
        threshold:
          value: 0.98

layered_runtime:
  layers:
  - name: runtime_edge
    static_layer:
      envoy:
        resource_limits:
          listener:
            listener_edge_ingress:
              connection_limit: 10000
      overload:
        global_downstream_max_connections: 50000
